[tool.poetry]
name = "dns_health_exporter"
version = "0.1.0"
description = "A little monitor script to report prometheus metrics for DNS health when querying a specified list of hosts"
authors = ["Joshua Coales <joshua@coales.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
prometheus-client = "^0.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
